# ChangeLog for xfce-extra/xfce4-cpu-freq
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Dec 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-cpu-freq-9999.ebuild:
  Fixed make check

  09 Dec 2008; Christoph Mende <angelos@gentoo.org>
  +files/xfce4-cpu-freq-compile-fix.patch, xfce4-cpu-freq-9999.ebuild:
  Add patch from upstream bug 3357 to fix compilation

  08 Dec 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-cpu-freq-9999.ebuild:
  Fixed MY_PN

  04 Dec 2007; Christoph Mende <angelos@gentoo.org>
  xfce4-cpu-freq-9999.ebuild:
  Add DOCS

  08 Jun 2007; Christoph Mende <angelos@gentoo.org>
  +xfce4-cpu-freq-9999.ebuild:
  Initial import
