@@ -2,13 +2,13 @@
 Hash: SHA1
 
 AUX xfce4-cpu-freq-compile-fix.patch 5660 RMD160 81ae440b2389232150a1f926749848caf68f3b9b SHA1 f0d88112f4212207e2f28d5becc8aee2be728211 SHA256 333b692914aa6b029498db8401b814ea3cc997dc4d1b0f2bd20e531a1c1a6318
-EBUILD xfce4-cpu-freq-9999.ebuild 637 RMD160 14eb99f004729f09a84ea43d3b00b915b6bab669 SHA1 c7f508414c6e19e8fe2ec898d271f717ae2b2639 SHA256 7c1c58c8bc21465b5ac8d05484c88494f90c68702d7f85c355a82b3c34e3a139
-MISC ChangeLog 698 RMD160 6bbffbc0ecae69d1a31825ec85a97d0f1a55bbdf SHA1 d238e9e89100f099a2a494f562147b1d3e677d09 SHA256 03cb14227f65346187f07f1806a43eb1ad529009cf16592b1924ca9996e2575f
+EBUILD xfce4-cpu-freq-9999.ebuild 637 RMD160 fdccf79c308840d7df8b004d8d619c46b3e4b0b6 SHA1 8458d78ce04d835a4d1e8fccb081c9cc74f62018 SHA256 8703396898c6d74a427b08e9fd2fab9c596e347c89dd720515ada69b170a6e25
+MISC ChangeLog 819 RMD160 8e71abb74f92002fc7f0192f0cecbefc27786beb SHA1 01e33aac6b9a7e978ef63bf857e4ba24626edb7d SHA256 a9fea0dafc34ba751f1cf8d6c43e25efb29b14c73e50a1ed05165f4ced2d5898
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk+kFsACgkQKhnDs22gwa9WAQCfW7R7jb12ToCVzdJlUE/BX9+8
-SL4AoO/FnPa9pk2Dt2G9Xs5JQw1KM7it
-=mtLy
+iEYEARECAAYFAklK2r8ACgkQKhnDs22gwa9VkQCeNAs+dXdCKsDQwpkl76cWUKkC
+Z+UAoP6y+vVuZ4MH6BU+cNemGEc4aWiw
+=60Ul
 -----END PGP SIGNATURE-----
