@@ -4,7 +4,7 @@
 
 MY_PN=${PN/-freq/freq}
 
-inherit eutils xfce4
+inherit xfce4
 
 xfce4_panel_plugin
 
@@ -12,9 +12,10 @@ DESCRIPTION="A panel plugin for showing information about cpufreq settings"
 KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE=""
 
+XFCE4_PATCHES="${FILESDIR}/${PN}-compile-fix.patch"
+
 src_unpack() {
 	xfce4_src_unpack
-	epatch "${FILESDIR}"/${PN}-compile-fix.patch
 	echo "panel-plugin/xfce4-cpufreq-configure.c" >> "${S}"/po/POTFILES.in
 	echo "panel-plugin/xfce4-cpufreq-linux.c" >> "${S}"/po/POTFILES.in
 	echo "panel-plugin/xfce4-cpufreq-overview.c" >> "${S}"/po/POTFILES.in
