@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Dec 2008; Christoph Mende <angelos@gentoo.org>
+  xfce4-cpu-freq-9999.ebuild:
+  Use XFCE4_PATCHES instead of epatch
+
   09 Dec 2008; Christoph Mende <angelos@gentoo.org>
   xfce4-cpu-freq-9999.ebuild:
   Fixed make check
